--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "supertest": "^6.3.0",
+    "twilio": "^3.82.1"
   }
 }
