--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "handlebars": "^4.7.7",
     "jimp": "^0.16.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
+    "nodemailer": "^6.8.0",
     "supertest": "^6.3.0",
     "twilio": "^3.82.1"
   }
