--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@geoapify/angular-geocoder-autocomplete": "^1.4.0",
     "ngx-cookie-service": "^14.0.1",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
