--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "nodemailer": "^6.8.0",
+    "razorpay": "^2.8.4",
     "supertest": "^6.3.0",
     "twilio": "^3.83.4"
   }
